# stuttr

./: .env-sample  Cargo.toml  sqlx-data.json
migrations/: 20220703110807_initial.sql
src/: commands.rs  main.rs  sync.rs
src/commands/: list.rs  mod.rs  register.rs  sync.rs
