[package]
name = "stuttr-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version="0.11", features = ["framework", "standard_framework", "rustls_backend"]}
tokio = { version = "1.19", features = ["macros", "signal", "rt-multi-thread"] }
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.3"
web_ical = {git="https://github.com/otoxteam/web_ical.git", branch="master"}