[package]
name = "stuttr-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version="0.11", features = ["framework", "standard_framework", "rustls_backend"]}
tokio = { version = "1.19", features = ["macros", "signal", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.3"
gql_client = "1.0.4"
url = "2.2"
rand = "0.8"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "offline"] }